--- a/plugin.xml
+++ b/plugin.xml
@@ -152,7 +152,7 @@
 
          <preference name="CAMERA_USAGE_DESCRIPTION" default=" " />
          <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
-             <string>$CAMERA_USAGE_DESCRIPTION</string>
+             <string>THIS IS A TEST</string>
          </config-file>
 
          <config-file target="*-Info.plist" parent="NSLocationWhenInUseUsageDescription">
